--- a/css_folder/module2.css
+++ b/css_folder/module2.css
@@ -35,6 +35,7 @@ h1 {
     padding: 10px;
     position: relative;
     background-color: #ccc;
+    margin: 1%;
     margin-bottom: 20px;
     border: 1px solid black;
 }
