--- a/css_folder/module3.css
+++ b/css_folder/module3.css
@@ -1,12 +1,14 @@
 body {
     background-color: #896A4D;
+    font-size: 16px;
+    color: black;
 }
 
 /* Font styling form Google fonts */
 .playfair-display-font {
     font-family: "Playfair Display", serif;
     font-optical-sizing: auto;
-    font-weight: 500;
+    font-weight: 400;
     font-style: normal;
   }
 
@@ -17,10 +19,23 @@ body {
     border: 0;
 }
 
+/* Remove padding and margin from the navbar and container */
+.navbar-header, .navbar {
+    padding: 0;
+    margin: 0;
+}
+
+.container {
+    padding-left: 0;
+    margin-left: 0;
+}
+
 /* Logo image */
 #logo-img {
     background: url('../images/Holfta_logo.png') no-repeat;
-    width: 150px;
-    height: 150px;
-    margin: 10px 15px 10px 0px;
+    width: 110px;
+    height: 110px;
+    background-size: contain;
+    margin-left: 5%;
+    padding-left: 0;
 }
