--- a/css_folder/module3.css
+++ b/css_folder/module3.css
@@ -1,6 +1,6 @@
 body {
     background-color: #896A4D;
-    font-size: 16px;
+    font-size: 14px;
     color: black;
 }
 
@@ -10,13 +10,18 @@ body {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-  }
+}
 
 /* Header styling */
 #header-nav {
     background-color: #706642;
     border-radius: 0;
     border: 0;
+}
+
+.navbar-header {
+    display: flex;
+    align-items: flex-start;
 }
 
 /* Remove padding and margin from the navbar and container */
@@ -30,12 +35,45 @@ body {
     margin-left: 0;
 }
 
-/* Logo image */
+/* Logo image, visible only on medium and large screens */
 #logo-img {
     background: url('../images/Holfta_logo.png') no-repeat;
     width: 110px;
     height: 110px;
     background-size: contain;
-    margin-left: 5%;
-    padding-left: 0;
+}
+
+/* Navbar brand styling */
+.navbar-brand {
+    padding-top: 20px;
+    margin-left: 15px;
+}
+
+.navbar-brand h1 {
+    color: black;
+    text-shadow: 1px 1px 1px gray;
+}
+
+.navbar-brand a:hover, .navbar-brand a:focus {
+    text-decoration: none;
+}
+
+/* Navbar toggle button */
+.navbar-toggle {
+    margin-top: 20px;
+    margin-left: auto;
+}
+
+/* Hide the logo on small screens */
+@media (max-width: 767px) {
+    #logo-img {
+        display: none;
+    }
+}
+
+/* Hide the navbar toggle button on medium and large screens */
+@media (min-width: 768px) {
+    .navbar-toggle {
+        display: none;
+    }
 }
